tests/bench/mvcgen/loom/Loom/Test/Strategies/IntroTargetLet.lean
import Loom.Tactic.VCGen

/-!
Tests that `lmvcgen` handles target-level `let` binders before classifying the exposed goal.
-/

open Loom Lean Meta Order Std.Internal.Do

set_option new_wp_monad true
set_option mvcgen.warning false

namespace Loom.Test.Strategies.IntroTargetLet

macro "test" : tactic => `(tactic| lmvcgen (names := [s‚āĀ, s‚āā]) -trivial)

/--
error: unsolved goals
case vc1
‚äĘ 1 = 1
-/
#guard_msgs in
example : (let n : Nat := 1; n = 1) := by
  test

/--
error: unsolved goals
case vc1
f‚úĚ : Nat ‚Üí Nat := fun n => n
‚äĘ f‚úĚ 0 = 0
-/
#guard_msgs in
example : (let f : Nat ‚Üí Nat := fun n => n; f 0 = 0) := by
  test

/--
error: unsolved goals
case vc1
P‚úĚ : Nat ‚Üí Bool ‚Üí Prop := ‚ä§
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
a‚úĚ : P‚úĚ s‚āĀ‚úĚ s‚āā‚úĚ
‚äĘ P‚úĚ s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example : (let P : Nat ‚Üí Bool ‚Üí Prop := ‚ä§; P ‚äĎ P) := by
  test

/--
error: unsolved goals
case vc1
P‚úĚ : Nat ‚Üí Bool ‚Üí Prop := fun n b => n = n ‚ąß b = b
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
a‚úĚ : P‚úĚ s‚āĀ‚úĚ s‚āā‚úĚ
‚äĘ P‚úĚ s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example : (let P : Nat ‚Üí Bool ‚Üí Prop := fun n b => n = n ‚ąß b = b; P ‚äĎ P) := by
  test

example {l : Type} [CompleteLattice l] :
    (let P : Nat ‚Üí Bool ‚Üí l := ‚ä§; P ‚äĎ P) := by
  lmvcgen -trivial

/--
error: unsolved goals
case vc1
l : Type
inst : CompleteLattice l
P‚úĚ : Nat ‚Üí Bool ‚Üí l := ‚ä§
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ ‚ä§ ‚äĎ P‚úĚ s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example {l : Type} [CompleteLattice l] :
    (let P : Nat ‚Üí Bool ‚Üí l := ‚ä§; ‚ä§ ‚äĎ P) := by
  test


example {l : Type} [CompleteLattice l] :
    (let P : Nat ‚Üí Bool ‚Üí l := fun _ _ => (‚ä§ : l); P ‚äĎ P) := by
  lmvcgen -trivial

end Loom.Test.Strategies.IntroTargetLet
